--- a/html/login.html
+++ b/html/login.html
@@ -6,6 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VoiceBox - Login & Signup</title>
     <meta name="description" content="Secure login for VoiceBox app">
+
+    <!-- Prevent Browser Caching -->
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
+
+    <!-- VoiceBox App Icon -->
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/voicebox-icon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../assets/voicebox-icon.png">
+    <link rel="shortcut icon" href="../assets/voicebox-icon.png">
+
     <link rel="stylesheet" href="../css/auth.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
