Fixed voice issues: Hindi number conversion and complete bill reading

--- a/html/index.html
+++ b/html/index.html
@@ -1290,6 +1290,8 @@
     <script src="../js/bill-replay.js"></script>
     <script src="../js/voice-stop.js"></script>
     <script src="../js/translator.js"></script>
+    <script src="../js/hindi-number-converter.js"></script>
+    <script src="../js/voice-simple.js"></script>
     <script src="../js/payment-security.js"></script>
     <script src="../js/receipt-generator.js"></script>
     <script src="../js/maps.js"></script>
