--- a/html/index.html
+++ b/html/index.html
@@ -23,7 +23,7 @@
 
 <body>
     <!-- Header -->
-    <header class="header">
+    <header class="header" style="width:100%;">
         <div class="container">
             <div class="logo">
                 <svg width="40" height="40" viewBox="0 0 40 40" fill="none">
